# axis_assignment

./: .gitignore  AxisImg.h  CMakeLists.txt  HttpClient.cpp  HttpClient.h  README.md  Utils.cpp  main.cpp
axis/: fastcgi_example.patch  fastcgi_example_1_0_0_armv7hf.eap  vdoencodeclient_1_0_0_armv7hf.eap
config/: configs.xml
http_server/: http-server.py
src/: AxisImg.cpp  Utils.h  main.cpp
